# mimicri

./: .dockerignore  .gitignore  .sample.env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  playlist.json  publish.py  publish.sh  test.json
.github/workflows/: docker-image.yml  unit-tests.yml
src/: config.rs  logging.rs  main.rs  media.rs  message_context.rs  metadata.rs  play.rs  playlist.rs  strings.rs
src/controls/: commands.rs  mod.rs
src/database/: commands.rs  database.rs  mod.rs  plugin.rs  sqlite_plugin.rs
src/database_plugin/: mod.rs  plugin.rs  sqlite_plugin.rs
src/logging/: commands.rs  mod.rs
src/media/: commands.rs  global_media_player.rs  media.rs  media_info.rs  metadata.rs  mod.rs  plugin.rs
src/utils/: cli.rs  config.rs  message_context.rs  mod.rs  responses.rs  strings.rs
