[package]
name = "mimicri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
crossbeam = "0.8"
async-std = { version = "1.12.0" , features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
sqlite = "0.27.0"

[dependencies.songbird]
version = "0.3"

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.dotenv]
version = "0.15.0"
