[package]
name = "mimicri"
version = "0.8.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing-futures = "0.2"
tracing-appender = "0.2"
ansi_term = "0.12"
crossbeam = "0.8"
async-std = { version = "1.12.0", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
sqlite = "0.27.0"
serial_test = "0.9.0"

[dependencies.songbird]
version = "0.3"

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.dotenv]
version = "0.15.0"

[build-dependencies]
anyhow = "1.0.65"
vergen = "7.4.2"
