[package]
name = "mimicri"
version = "0.9.3"
edition = "2021"
build = "build.rs"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-std = { version = "1.12.0", features = ["unstable"] }
ansi_term = "0.12"
dotenv = "0.15.0"
crossbeam = "0.8"
regex = "1"
sqlite = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing-futures = "0.2"
tracing-appender = "0.2"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "voice", "rustls_backend"]

[dependencies.songbird]
version = "0.3"

[dependencies.poise]
version = "0.4.1"

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[build-dependencies]
anyhow = "1.0.65"
vergen = "7.4.2"
